@@ -52,6 +52,11 @@ main {
       }
     }
   }
+
+  p.hint {
+    margin: 0 auto;
+    text-align: center;
+  }
 }
 
 blockquote {
